@@ -1,42 +1,39 @@
 package maps;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 public class map {
 
     private static final Map<String, String> SHORT_IDS;
     static {
-        Map<String, String> map = new HashMap<>(64);
-        map.put("ACT", "Australia/Darwin");
-        map.put("AET", "Australia/Sydney");
-        map.put("AGT", "America/Argentina/Buenos_Aires");
-        map.put("ART", "Africa/Cairo");
-        map.put("AST", "America/Anchorage");
-        map.put("BET", "America/Sao_Paulo");
-        map.put("BST", "Asia/Dhaka");
-        map.put("CAT", "Africa/Harare");
-        map.put("CNT", "America/St_Johns");
-        map.put("CST", "America/Chicago");
-        map.put("CTT", "Asia/Shanghai");
-        map.put("EAT", "Africa/Addis_Ababa");
-        map.put("ECT", "Europe/Paris");
-        map.put("IET", "America/Indiana/Indianapolis");
-        map.put("IST", "Asia/Kolkata");
-        map.put("JST", "Asia/Tokyo");
-        map.put("MIT", "Pacific/Apia");
-        map.put("NET", "Asia/Yerevan");
-        map.put("NST", "Pacific/Auckland");
-        map.put("PLT", "Asia/Karachi");
-        map.put("PNT", "America/Phoenix");
-        map.put("PRT", "America/Puerto_Rico");
-        map.put("PST", "America/Los_Angeles");
-        map.put("SST", "Pacific/Guadalcanal");
-        map.put("VST", "Asia/Ho_Chi_Minh");
-        map.put("EST", "-05:00");
-        map.put("MST", "-07:00");
-        map.put("HST", "-10:00");
-        SHORT_IDS = Collections.unmodifiableMap(map);
+        SHORT_IDS = Map.ofEntries(
+                Map.entry("ACT", "Australia/Darwin"),
+                Map.entry("AET", "Australia/Sydney"),
+                Map.entry("AGT", "America/Argentina/Buenos_Aires"),
+                Map.entry("ART", "Africa/Cairo"),
+                Map.entry("AST", "America/Anchorage"),
+                Map.entry("BET", "America/Sao_Paulo"),
+                Map.entry("BST", "Asia/Dhaka"),
+                Map.entry("CAT", "Africa/Harare"),
+                Map.entry("CNT", "America/St_Johns"),
+                Map.entry("CST", "America/Chicago"),
+                Map.entry("CTT", "Asia/Shanghai"),
+                Map.entry("EAT", "Africa/Addis_Ababa"),
+                Map.entry("ECT", "Europe/Paris"),
+                Map.entry("IET", "America/Indiana/Indianapolis"),
+                Map.entry("IST", "Asia/Kolkata"),
+                Map.entry("JST", "Asia/Tokyo"),
+                Map.entry("MIT", "Pacific/Apia"),
+                Map.entry("NET", "Asia/Yerevan"),
+                Map.entry("NST", "Pacific/Auckland"),
+                Map.entry("PLT", "Asia/Karachi"),
+                Map.entry("PNT", "America/Phoenix"),
+                Map.entry("PRT", "America/Puerto_Rico"),
+                Map.entry("PST", "America/Los_Angeles"),
+                Map.entry("SST", "Pacific/Guadalcanal"),
+                Map.entry("VST", "Asia/Ho_Chi_Minh"),
+                Map.entry("EST", "-05:00"),
+                Map.entry("MST", "-07:00"),
+                Map.entry("HST", "-10:00"));
     }
 }
